# Tibet-Related-Public-Opinion-LLM

./: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
backend/: README.md  create_admin.py  environment.yml  jieba_user_dict.txt  requirements.txt  start_server.py  test_api.py  test_jsonl.py
backend/backend/: settings.py  urls.py
backend/chunker_api/: admin.py  apps.py  chroma_sync.py  llm_service.py  models.py  rag_service.py  urls.py
backend/chunker_api/flow/: __init__.py  agents.py  extractor.py  graph_builder.py  render_graphviz.py  schemas.py  service.py
backend/chunker_api/migrations/: 0001_initial.py  0002_chatsession_chatmessage.py  0003_user_is_enterprise_user.py  0004_remove_user_is_enterprise_user_user_employee_id_and_more.py  0005_chatmessage_rag_v1_fields.py  0006_chatmessage_suggested_next_questions.py  0007_adminuser_knowledgebase_status_document_and_more.py  0008_userpersona.py
backend/chunker_api/rag/: __init__.py  answer_builder.py  question_router.py  rag_factory.py  rag_pipeline.py  retrieval_engine.py
backend/data/: enterprise_users.xlsx
backend/rerank_service/: app.py  start.py
backend/tests/: ablation_experiments.py  conftest.py  eval_dataset.py  test_answer_builder.py  test_question_router.py  test_retrieval_engine.py
backend/utils/: auth.py
backend/utils/chunk/: rrf.py  (+10 more)
hybrid_retrieval_fusion/: __init__.py  adaptive_threshold.py  bm25_indexer.py  cross_encoder.py  hybrid_retriever.py  mmr_reranker.py  multilingual_tokenizer.py  rrf_merger.py  types.py
promt/: prompt.py
rag_web/: IMPLEMENTATION_SUMMARY.md  README.md  index.html  package-lock.json  package.json  vite.config.ts
rag_web/src/: App.vue  main.ts
(+55 files in other folders)
